--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,8 @@
   <!--</svg>-->
   <!--</div>-->
 </div>
-
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
 </body>
 <script>
   // function reset() {
