--- a/web/index.html
+++ b/web/index.html
@@ -56,6 +56,8 @@
   <!--</div>-->
 </div>
 <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
 </body>
 <script>
